syntax = "proto3";

// Authentication service.
service Cve {
  // Authentication request for a user.
  rpc GetOne (GetOneRequest) returns (GetOneResponse);
  // Returns all CVEs
  rpc GetMany (GetManyRequest) returns (GetManyResponse);
  // Creates a single CVE.
  rpc Create (CreateRequest) returns (CreateResponse);
  // Updates a single CVE.
  rpc Update (UpdateRequest) returns (UpdateResponse);
  // Deletes a single CVE.
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

// Model for CVE information.
message CveModel {
  string id = 1;
  string cve_id = 2;
  string access_authentication = 3;
  string access_complexity = 4;
  string access_vector = 5;
  float cvss = 6;
  uint32 cwe_code = 7;
  string cwe_name = 8;
  string impact_availability = 9;
  string impact_confidentiality = 10;
  string impact_integrity = 11;
  string mod_date = 12;
  string pub_date = 13;
  string summary = 14;
  repeated string products = 15;
  string vendor = 16;
}

// GetOne request message.
message GetOneRequest {
  string id = 1;
  string jwt = 2;
}

// GetOne response message.
message GetOneResponse {
  CveModel cve = 1;
}

// GetMany request message.
message GetManyRequest {
  uint32 pageSize = 1;
  uint32 pageOffset = 2;
  string jwt = 3;
}

// GetMany response message.
message GetManyResponse {
  repeated CveModel cves = 1;
}

// Create request message.
message CreateRequest {
  CveModel cve = 1;
  string jwt = 2;
}

// Create response message.
message CreateResponse {
  string id = 1;
}

// Update request message.
message UpdateRequest {
  CveModel cve = 1;
  string jwt = 2;
}

// Update response message.
message UpdateResponse {
  bool result = 1;
}

// Delete request message.
message DeleteRequest {
  string id = 1;
  string jwt = 2;
}

// Delete response message.
message DeleteResponse {
  bool result = 1;
}
