import { CveModel } from "../../proto/compiled_proto/cve";

/**
 * PocketBase model of CVE.
 */
export type CveDbModel = {
  id: string,
  _id: string,
  access_authentication: string,
  access_complexity: string,
  access_vector: string,
  cvss: number,
  cwe_code: number,
  cwe_name: string,
  impact_availability: string,
  impact_confidentiality: string,
  impact_integrity: string,
  mod_date: string,
  pub_date: string,
  summary: string,
};

/**
 * Converts `CveDbModel` into `CveModel`.
 * @param cve 
 * @returns 
 */
export function cveFromDb(cve: CveDbModel): CveModel {
  return {
    id: cve.id,
    cveId: cve._id,
    accessAuthentication: cve.access_authentication,
    accessComplexity: cve.access_complexity,
    accessVector: cve.access_vector,
    cvss: cve.cvss,
    cweCode: cve.cwe_code,
    cweName: cve.cwe_name,
    impactAvailability: cve.impact_availability,
    impactConfidentiality: cve.impact_confidentiality,
    impactIntegrity: cve.impact_integrity,
    modDate: cve.mod_date,
    pubDate: cve.pub_date,
    summary: cve.summary,
    products: [],
    vendor: "",
  };
}

/**
 * Converts `CveDbModel[]` into `CveModel[]`.
 * @param cves 
 * @returns 
 */
export function cvesFromDb(cves: CveDbModel[]): CveModel[] {
  const data: CveModel[] = [];
  cves.forEach(cve => {
    data.push(cveFromDb(cve));
  });
  return data;
}

/**
 * Converts `CveModel` into `CveDbModel`.
 * @param cve 
 * @returns 
 */
export function cveToDb(cve: CveModel): CveDbModel {
  return {
    id: '',
    _id: cve.cveId,
    access_authentication: cve.accessAuthentication,
    access_complexity: cve.accessComplexity,
    access_vector: cve.accessVector,
    cvss: cve.cvss,
    cwe_code: cve.cweCode,
    cwe_name: cve.cweName,
    impact_availability: cve.impactAvailability,
    impact_confidentiality: cve.impactConfidentiality,
    impact_integrity: cve.impactIntegrity,
    mod_date: cve.modDate,
    pub_date: cve.pubDate,
    summary: cve.summary,
  };
}
